--- a/src/components/Global/LiquidProgress/ProgressComponent.css
+++ b/src/components/Global/LiquidProgress/ProgressComponent.css
@@ -198,3 +198,9 @@
   color: var(--color-primary);
   align-self: start;
 }
+@media only screen and (max-width: 767px) {
+  .progress{
+    --progress-size: 300px!important;
+    margin: 0 auto
+  }
+}
