--- a/src/all.module.css
+++ b/src/all.module.css
@@ -4731,6 +4731,7 @@ input[type=range]::-ms-thumb {
 
 
 .ItemSingle figure {
+    z-index: 1;
     display: block;
     width: 100%;
     height: 280px;
