--- a/src/all.module.css
+++ b/src/all.module.css
@@ -2154,7 +2154,7 @@ section.chart-wrapper {
 }
 
 .DappSubMenu {
-    display: inline-block;
+    display: block;
     padding: 0 8px;
     margin: 20px auto;
     width: auto;
@@ -15987,4 +15987,49 @@ input {
 }
 .SliderInputElement{
     margin-top: 10px;
+}
+.FactoryCreateWrapper {
+    display: flex;
+}
+.FactoryCreateWrapper .FactoryCreateLeftRow{
+    width: 30%;
+    display: inline-block;
+}
+.FactoryCreateWrapper .FactoryCreateRightRow{
+    width: 65%;
+    display: inline-block;
+    margin-left: 5%;
+}
+.DropdownFileContainer{
+    display: block!important;
+    height: fit-content!important;
+    border-color: #ddd!important;
+}
+.DropdownFileContainer>div, .DropdownFileContainer>div span{
+    display: block!important;
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.DropdownFileContainer>svg{
+    display: none;
+    width: 100%;
+    position: relative;
+    height: 100px;
+}
+.FilePreview img{
+    width: 100%;
+    border-radius: 10px;
+}
+.DropdownFileContainer>svg path{
+    fill: #ddd;
+}
+.FilePreview{
+    margin-top: 20px;
+    border: dashed 2px #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
 }
