--- a/src/all.module.css
+++ b/src/all.module.css
@@ -16120,3 +16120,9 @@ input {
         width: fit-content!important
     }
 }
+
+@media only screen and (min-width: 1457px) and (max-width: 1651px) {
+    .Navigation{
+        margin-left: 220px!important;
+    }
+}
