--- a/src/all.module.css
+++ b/src/all.module.css
@@ -8043,6 +8043,7 @@ input[type=range]::-ms-thumb {
     border-radius: 0 0 0 20px;
     font-size: 16px;
     padding: 2%;
+    margin: 10px auto;
 }
 
 .TokensSelectorCategoriesList {
